syntax = "proto3";

option csharp_namespace = "GrpcService1";
import "google/api/annotations.proto";
import "google/api/http.proto";
package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  //rpc SayHello (HelloRequest) returns (HelloReply);
  //rpc SayHelloNewMethod(HelloRequest) returns (HelloReply);

  rpc SayHello(HelloRequest) returns (HelloReply){
	  option(google.api.http)={
		  get: "/v1/greeter/{name}"
	  };
  }

   rpc SayHelloNewMethod(HelloRequest) returns (HelloReply){
	  option(google.api.http)={
		  get: "/v1/greeternewmethod/{name}"
	  };
  }
  
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
